# opsec-guard

./: .gitignore  pyproject.toml
agent/: device_agent.py
opsec_guard/: cli.py  main.py
opsec_guard/commands/: alerts.py  audit.py  broker.py  check.py  enroll.py  fetch.py  info.py  maid.py  monitor.py  org.py  report.py  reset.py  scan.py  techniques.py
opsec_guard/data/: apps.json  brokers.json  flagged_locations.json  sdks.json  techniques.json
opsec_guard/server/: app.py  run.py
opsec_guard/sources/: app_store.py  appcensus.py  base.py  exodus.py  google_play.py  manager.py
opsec_guard/utils/: alerts.py  cache.py  display.py  geo.py  storage.py
tests/: test_audit.py  test_check.py  test_report.py  test_sources.py  test_techniques_org.py
tests/commands/: test_check.py  test_enroll_csv.py  test_maid.py  test_org.py
tests/server/: test_api.py
tests/sources/: test_base.py  test_exodus.py
tests/utils/: test_cache.py  test_geo.py  test_storage.py
