[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsec-guard"
version = "0.1.0"
description = "MAID exposure auditing and mobile geolocation privacy tool"
authors = [{name = "arctracerexequias"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["opsec", "privacy", "maid", "advertising-id", "geolocation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "google-play-scraper>=1.2.0",
]

[project.scripts]
opsec-guard = "opsec_guard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["opsec_guard*"]

[tool.setuptools.package-data]
"opsec_guard.data" = ["*.json"]
